# Cryptography_RSA

./: Addition.c  CMakeLists.txt  ExpoM.cpp  Funcao_Prime.c  GCD_gmp.c  Is_Prime_MExGMP.cpp  Is_Prime_MExGMP2.cpp  MDC.cpp  MontMul.cpp  MontgomeryMul.cpp  Multiplication.c  RSA.c  RSA_Primitive.c  Smart_guess_primes.cpp  add.c  crivo.c  shifts.c
include/: prime_check.h
src/: prime_check.c
tests/: test_prime_check.cpp
